Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rand_100 = np.random"
+    "rand_100 = np.random.normal(size=100)\n"
    ]
   },
   {
