Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rand_100 = np.random.normal(size=100)\n"
+    "rand_100 = np.random.normal(size=100)\n",
+    "np.append()"
    ]
   },
   {
