Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "rand_100 = np.random.normal(size=100)\n",
-    "np.append()"
+    "np.append(rand_100, [1.2, 1.2, 1.2, 1.2,])"
    ]
   },
   {
