--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,8 @@
    "outputs": [],
    "source": [
     "def get_median(data):\n",
-    "    pass\n",
+    "    data.sort()\n",
+    "    \n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
     "test2 = [4, 2, 3, 1]\n",
