--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "def get_median(data):\n",
-    "    data_copy = data.copy()\n",
+    "    data_copy = data.copy().sort()\n",
     "    \n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
