Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,8 @@
    "source": [
     "def get_median(data):\n",
     "    data_copy = data.copy().sort()\n",
-    "    n = len\n",
+    "    n = len(data_copy)\n",
+    "    if %more\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
     "test2 = [4, 2, 3, 1]\n",
