--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,9 @@
     "    data_copy = data.copy().sort()\n",
     "    n = len(data_copy)\n",
     "    if n%2==0:\n",
-    "        return data_copy[n]\n",
+    "        return data_copy[n/2]\n",
+    "    else:\n",
+    "        return\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
     "test2 = [4, 2, 3, 1]\n",
