Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,22 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "3\n",
-      "-0.510805137568873\n"
+      "3\n",
+      "0.12898291075741067\n"
      ]
     }
    ],
    "source": [
     "def get_median(data):\n",
     "    data_copy = data.copy()\n",
+    "    data_copy.sort()\n",
     "    n = len(data_copy)\n",
     "    if n%2==0:\n",
     "        return data_copy[n//2]\n",
