Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
     "    data_copy.sort()\n",
     "    n = len(data_copy)\n",
     "    if n%2==0:\n",
-    "        return data_copy[n//2]\n",
+    "        return data_copy[n//2]+\n",
     "    else:\n",
     "        return data_copy[n//2]\n",
     "\n",
