--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "3\n",
+      "2.5\n",
       "0.12898291075741067\n"
      ]
     }
@@ -208,7 +208,7 @@
     "    data_copy.sort()\n",
     "    n = len(data_copy)\n",
     "    if n%2==0:\n",
-    "        return (data_copy[n//2]+data_copy[n//2])/2\n",
+    "        return (data_copy[n//2]+data_copy[n//2-1])/2\n",
     "    else:\n",
     "        return data_copy[n//2]\n",
     "\n",
