--- a/index.ipynb
+++ b/index.ipynb
@@ -239,6 +239,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_mode(data):\n",
     "    pass\n",
     "\n",
