Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,9 @@
    "outputs": [],
    "source": [
     "def get_mode(data):\n",
-    "    for item\n",
+    "    temp_max = \n",
+    "    for item in data:\n",
+    "        \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
