Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
    "outputs": [],
    "source": [
     "def get_mode(data):\n",
-    "    temp_max = \n",
+    "    temp_max_count = 0\n",
+    "    temp_\n",
     "    for item in data:\n",
     "        \n",
     "\n",
