Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "source": [
     "def get_mode(data):\n",
     "    temp_max_count = 0\n",
-    "    temp_\n",
+    "    temp_max_item = None\n",
     "    for item in data:\n",
     "        \n",
     "\n",
