Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,8 @@
     "    temp_max_count = 0\n",
     "    temp_max_item = None\n",
     "    for item in data:\n",
-    "        if data.\n",
+    "        if data.count(item) > temp_max_count:\n",
+    "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
