--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "source": [
     "def get_mode(data):\n",
     "    temp_max_count = 0\n",
-    "    temp_max_item = None\n",
+    "    max_\n",
     "    for item in data:\n",
     "        if data.count(item) > temp_max_count:\n",
     "            \n",
