Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,8 +240,7 @@
    "outputs": [],
    "source": [
     "def get_mode(data):\n",
-    "    temp_max_count = 0\n",
-    "    max_\n",
+    "    count_d\n",
     "    for item in data:\n",
     "        if data.count(item) > temp_max_count:\n",
     "            \n",
