Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,9 +240,8 @@
    "outputs": [],
    "source": [
     "def get_mode(data):\n",
-    "    count_d\n",
+    "    count_dict = {}\n",
     "    for item in data:\n",
-    "        if data.count(item) > temp_max_count:\n",
     "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
