Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,6 +242,8 @@
     "def get_mode(data):\n",
     "    count_dict = {}\n",
     "    for item in data:\n",
+    "        if item in count_dict.keys():\n",
+    "            \n",
     "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
