Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
     "    count_dict = {}\n",
     "    for item in data:\n",
     "        if item in count_dict.keys():\n",
-    "            \n",
+    "            count_dict.update({})\n",
     "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
