Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,9 @@
     "    count_dict = {}\n",
     "    for item in data:\n",
     "        if item in count_dict.keys():\n",
-    "            count_dict.update({item: count_dict[item]})\n",
+    "            count_dict.update({item: count_dict[item]+1})\n",
+    "        else:\n",
+    "            \n",
     "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
