--- a/index.ipynb
+++ b/index.ipynb
@@ -235,9 +235,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def get_mode(data):\n",
     "    count_dict = {}\n",
@@ -245,7 +255,7 @@
     "        if item in count_dict.keys():\n",
     "            count_dict.update({item: count_dict[item]+1})\n",
     "        else:\n",
-    "            \n",
+    "            count_dict.update({item: 1})\n",
     "            \n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
