Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
     "            count_dict.update({item: count_dict[item]+1})\n",
     "        else:\n",
     "            count_dict.update({item: 1})\n",
-    "    max_count = max()\n",
+    "            \n",
+    "    max_count = max(count_dict.values\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
