Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,15 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "None\n",
+      "3\n",
       "None\n",
+      "5\n",
       "None\n"
      ]
     }
@@ -257,7 +260,8 @@
     "        else:\n",
     "            count_dict.update({item: 1})\n",
     "            \n",
-    "    max_count = max(count_dict.values\n",
+    "    max_count = max(count_dict.values())\n",
+    "    print(max_count)\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
