--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,8 @@
     "            count_dict.update({item: 1})\n",
     "            \n",
     "    max_count = max(count_dict.values())\n",
-    "    for k,v in count_dict\n",
+    "    for k,v in count_dict.items():\n",
+    "        if v==max_co\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
