Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -254,6 +254,7 @@
    "source": [
     "def get_mode(data):\n",
     "    count_dict = {}\n",
+    "    outlist = []\n",
     "    for item in data:\n",
     "        if item in count_dict.keys():\n",
     "            count_dict.update({item: count_dict[item]+1})\n",
@@ -262,7 +263,7 @@
     "            \n",
     "    max_count = max(count_dict.values())\n",
     "    for k,v in count_dict.items():\n",
-    "        if v==max_co\n",
+    "        if v == max_count\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
