--- a/index.ipynb
+++ b/index.ipynb
@@ -235,19 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "None\n",
-      "3\n",
-      "None\n",
-      "5\n",
-      "None\n"
+      "[5]\n",
+      "[1, 5]\n",
+      "[1.2]\n"
      ]
     }
    ],
@@ -265,6 +262,7 @@
     "    for k,v in count_dict.items():\n",
     "        if v == max_count:\n",
     "            outlist.append(k)\n",
+    "    return outlist\n",
     "\n",
     "test1 = [1, 2, 3, 5, 5, 4]\n",
     "test2 = [1, 1, 1, 2, 3, 4, 5, 5, 5]\n",
