--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "outputs": [],
    "source": [
     "def check_outlier_effect(data, outlier):\n",
-    "    da\n",
+    "    data_with_outlier = data.append(outlier)\n",
+    "    \n",
     "    \n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
