--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    "source": [
     "def check_outlier_effect(data, outlier):\n",
     "    data_with_outlier = data.append(outlier)\n",
-    "    \n",
+    "    mean_effect = \n",
     "    \n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
