Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "def check_outlier_effect(data, outlier):\n",
     "    data_with_outlier = data.append(outlier)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
-    "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
+    "    median_effect = get_median(data_with_outlier) - g(data)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
     "    \n",
     "\n",
