--- a/index.ipynb
+++ b/index.ipynb
@@ -293,8 +293,8 @@
     "def check_outlier_effect(data, outlier):\n",
     "    data_with_outlier = data.append(outlier)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
-    "    median_effect = get_median(data_with_outlier) - g(data)\n",
-    "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
+    "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
+    "    mode_effect = get_mode(data_with_outlier) - get_mean(data)\n",
     "    \n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
