--- a/index.ipynb
+++ b/index.ipynb
@@ -294,8 +294,9 @@
     "    data_with_outlier = data.append(outlier)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
-    "    mode_effect = get_mode(data_with_outlier) - get_mean(data)\n",
+    "    mode_effect = get_mode(data_with_outlier) - get_mode(data)\n",
     "    \n",
+    "    return mean\n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
     "print(\"Effect outlier had on mean: {}\".format(mean_effect))\n",
