Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,9 +286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-6c80fca245d5>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-6c80fca245d5>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return mean_effect median_effect, mode_effect\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def check_outlier_effect(data, outlier):\n",
     "    data_with_outlier = data.append(outlier)\n",
@@ -296,7 +305,7 @@
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
     "    mode_effect = get_mode(data_with_outlier) - get_mode(data)\n",
     "    \n",
-    "    return mean\n",
+    "    return mean_effect median_effect, mode_effect\n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
     "print(\"Effect outlier had on mean: {}\".format(mean_effect))\n",
