Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
    ],
    "source": [
     "def check_outlier_effect(data, outlier):\n",
-    "    data_with_outlier = np\n",
+    "    data_with_outlier = np.append(data, )\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
     "    mode_effect = get_mode(data_with_outlier) - get_mode(data)\n",
