--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,7 @@
     "    data_with_outlier = np.append(data, outlier)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
-    "    mode_effect = get_mode(data_with_outlier) - get_mode(data)\n",
+    "    mode_effect = get_mode(data_with_outlier)[i] - get_mode(data)\n",
     "    \n",
     "    return mean_effect, median_effect, mode_effect\n",
     "\n",
