Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,15 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-35-c3aac86d0b60>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-36-895a6c18e986>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-c3aac86d0b60>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return mean_effect, median_effect, mode_effect\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-895a6c18e986>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return (mean_effect, median_effect, mode_effect)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
     "    mode_effect = np.array(get_mode(data_with_outlier) - np.array(get_mode(data))\n",
     "    \n",
-    "    return mean_effect, median_effect, mode_effect\n",
+    "    return (mean_effect, median_effect, mode_effect)\n",
     "\n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
