Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,15 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-36-895a6c18e986>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-895a6c18e986>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return (mean_effect, median_effect, mode_effect)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Effect outlier had on mean: 0.1876028030949283\n",
+      "Effect outlier had on median: 0.007530330201733659\n",
+      "Effect outlier had on mode: [0.]\n"
      ]
     }
    ],
@@ -303,9 +304,9 @@
     "    data_with_outlier = np.append(data, outlier)\n",
     "    mean_effect = get_mean(data_with_outlier) - get_mean(data)\n",
     "    median_effect = get_median(data_with_outlier) - get_median(data)\n",
-    "    mode_effect = np.array(get_mode(data_with_outlier) - np.array(get_mode(data))\n",
+    "    mode_effect = np.array(get_mode(data_with_outlier)) - np.array(get_mode(data))\n",
     "    \n",
-    "    return (mean_effect, median_effect, mode_effect)\n",
+    "    return mean_effect, median_effect, mode_effect\n",
     "\n",
     "\n",
     "mean_effect, median_effect, mode_effect = check_outlier_effect(data, 20)\n",
