--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
     "def get_trimmed_mean(data, trim=.05):\n",
     "    n = len(data)\n",
     "    trim_n = n*trim\n",
-    "    return get\n",
+    "    return get_mean(data[])\n",
     "\n",
     "trimmed_mean_test = [-10, 1, 1, 2, 3, 4, 5, 5, 6, 20] # trim = .10\n",
     "print(get_trimmed_mean(trimmed_mean_test, .10)) # 3.375\n",
